# brainfuck-rs

./: Cargo.toml  LICENSE  README.md
examples/: basic.rs  buffer.rs
examples/brainfuck-programs/: golden-ratio.b  head.b  hello-world.b  mandelbrot.b  qsort.b  rot13.b
src/: brainfuck.rs  instruction.rs  main.rs  token.rs
src/lib/: engine.rs  instruction.rs  lib.rs  token.rs  utils.rs
