[package]
name = "brainfuck-rs"
description = "A fast Brainfuck interpreter written in Rust."
version = "1.0.0"
edition = "2021"

[dependencies]
clap = { version = "4.3.15", features = ["cargo"] }
color-eyre = "0.6.2"
thiserror = "1.0.44"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
